--- a/escom-bpm-web/src/main/webapp/view/index.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/index.xhtml
@@ -121,7 +121,7 @@
                             <p:commandLink value="#{bundle.Sessions}"
                                            actionListener="#{sessionBean.openSessionsForm()}"/>
                             <p:separator/>
-                            <p:commandLink value="#{bundle.SettigsObject}"
+                            <p:commandLink value="#{bundle.SettigsObjects}"
                                            onstart="return isClose = 1;"
                                            ajax="false"
                                            action="objectsExpl"/>
