--- a/escom-bpm-web/src/main/webapp/view/common/confirm-dlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/confirm-dlg.xhtml
@@ -4,8 +4,8 @@
 >
 
     <p:confirmDialog global="true" showEffect="fade" hideEffect="fade" >
-        <p:commandButton value="#{bundle.Yes}" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
-        <p:commandButton value="#{bundle.Cancel}" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+        <p:commandButton value="#{bundle.Yes}" type="button" styleClass="ui-confirmdialog-yes"  />
+        <p:commandButton value="#{bundle.Cancel}" type="button" styleClass="ui-confirmdialog-no" />
     </p:confirmDialog>
 
 </ui:composition>
