--- a/escom-bpm-web/src/main/webapp/view/companies/departaments/department-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/companies/departaments/department-card.xhtml
@@ -22,7 +22,7 @@
                      columnClasses="ui-grid-col-12 col-padding">
 
             <p:outputLabel value="#{bundle.Company}"/>
-            <p:inputText value="#{_bean.companyName}" disabled="true" styleClass="ui-grid-col-12" />
+            <p:inputText value="#{_bean.companyName} Id=#{_bean.id}" disabled="true" styleClass="ui-grid-col-12" />
 
             <p:outputLabel value="#{bundle.Departament}" />
             <p:inputText id="nameItem" value="#{_bean.editedItem.name}" title="#{bundle.Name}"
