--- a/escom-bpm-web/src/main/webapp/view/staffs/staff-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/staffs/staff-explorer.xhtml
@@ -5,7 +5,8 @@
                 template="/view/templ/templ-explorer.xhtml">
 
     <!-- стандарный обозреватель/селектор для Штатных единиц -->
-    
+
+    <ui:param name="_explorerBean" value="#{companyExplBean}"/>
     <ui:param name="_rootBean"    value="#{companyBean}"/> 
     <ui:param name="_treeBean"    value="#{departmentBean}"/> 
     <ui:param name="_detailBean"  value="#{staffBean}"/>     
