Доработка замены объектов и мелкие косяки

--- a/escom-bpm-web/src/main/webapp/view/companies/company-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/companies/company-explorer.xhtml
@@ -17,6 +17,9 @@
     <ui:param name="_CreateItemLabel" value="#{bundle.Create}" />            
     
     <ui:define name="specDetailColumns">
+        <p:column headerText="#{bundle.Code}" sortBy="#{item.code}" rendered="#{_explorerBean.source != DictSource.FILTER_SOURCE}">
+            #{item.code}
+        </p:column>
     </ui:define>   
 
 </ui:composition>
