--- a/escom-bpm-web/src/main/webapp/view/companies/departaments/department-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/companies/departaments/department-explorer.xhtml
@@ -17,7 +17,7 @@
     <ui:param name="_CreateItemLabel" value="#{bundle.CreateDepartament}" />
     
     <ui:define name="specDetailColumns"> 
-        <p:column headerText="#{bundle.Code}" sortBy="#{item.code}">
+        <p:column headerText="#{bundle.Code}" sortBy="#{item.code}" rendered="#{_explorerBean.source != DictSource.FILTER_SOURCE}">
             #{item.code}
         </p:column>
     </ui:define>
